Finalized all four functions

--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -5,7 +5,7 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, comment=NA)
+knitr::opts_chunk$set(echo = TRUE, comment=NA, eval = FALSE)
 # options(tibble.width = Inf)
 ```
 
@@ -50,7 +50,9 @@ To access the API you'll need to first specify an API key as provided to you by 
 
 ```{r eval=FALSE}
 # Example API key (this key will not work).
-set_api_key("412dd2813fbf9037f5266557bbf5d1f5")
+set_api_key("700ce27d55e27922a39232f8403602ba")
+get_api_key()
+
 ```
 
 ```{r include=FALSE}
@@ -61,15 +63,57 @@ To obtain a key, please get in touch. Contact details are in `DESCRIPTION`.
 
 ## Sentiment Index
 
+Get media sentiment index values for specified media source, model, topic, dictionary, frequency, and aggregation method combination.
+
 ```{r}
 sent_index(
-   source="all",
-   model="model_2021-05-15",
-   topic="global",
-   freq="month",
-   dict="loughran",
-   aggr="sent_logit"
+   source = "all",
+   model = "model_2021-05-15",
+   topic = "global",
+   freq = "week",
+   dict = "loughran",
+   aggr = "sent_logit"
    )
 ```
 
+# Count of articles that make up sentiment
 
+Get a count of the number of articles for a specified media source, model, topic, and frequency of aggregation.
+
+```{r}
+sent_counts(
+   source = "all",
+   model = "model_2021-05-15",
+   topic = "global",
+   freq = "week"
+   )
+```
+
+# Date polarity
+
+Get a count of the number of positive and negative articles for a specified model, topic, dictionary, aggregation method, and frequency.
+
+```{r}
+sent_date_polarity(
+   source = "all",
+   model = "model_2021-05-15",
+   topic = "global",
+   freq = "week",
+   dict = "loughran",
+   aggr = "sent_logit"
+   )
+```
+
+# Word polarity
+
+Get the top 50 most frequently occurring positive and negative words for a specified model, topic, dictionary, aggregation method, and frequency. The timeframe over which these words are selected depends on the specified frequency (day = 30 days, week = 3 months, month = 6 months).
+
+```{r}
+sent_word_polarity(
+   source = "all",
+   model = "model_2021-05-15",
+   topic = "economy",
+   freq = "month",
+   dict = "loughran"
+   )
+```
