--- a/README.Rmd
+++ b/README.Rmd
@@ -100,25 +100,25 @@ sent_index(
    source = "businessday",
    model = "model_2021-05-15",
    topic = "global",
-   freq = "month",
+   freq = "day",
    dict = "loughran",
    aggr = "sent_logit"
    )
 
-# # A tibble: 734 × 9
-#    source published_date dict_name type     aggr_type  mean_sentiment relative absolute sent_log
-#    <chr>  <chr>          <chr>     <chr>    <chr>               <dbl>    <int>    <dbl>    <int>
-#  1 all    1970-01-01     loughran  polarity sent_logit        -0.0058        0        0        0
-#  2 all    1970-01-01     loughran  polarity sent_logit        -0.969        -1       -1        0
-#  3 all    1970-01-01     loughran  polarity sent_logit         0.713         1        1        0
-#  4 all    2001-01-01     loughran  polarity sent_logit        -1.49         -1       -1        0
-#  5 all    2001-01-01     loughran  polarity sent_logit         0             0        0        0
-#  6 all    2001-01-01     loughran  polarity sent_logit         0.741         1        1        0
-#  7 all    2001-02-01     loughran  polarity sent_logit        -1.25         -1       -1        0
-#  8 all    2001-02-01     loughran  polarity sent_logit        -0.0026        0        0        0
-#  9 all    2001-02-01     loughran  polarity sent_logit         0.818         1        1        0
-# 10 all    2001-03-01     loughran  polarity sent_logit        -0.0008        0        0        0
-# # … with 724 more rows
+# # A tibble: 224 × 9
+#    source      published_date dict_name type     aggr_type  mean_sentiment relative absolute sent_log
+#    <chr>       <chr>          <chr>     <chr>    <chr>               <dbl>    <dbl>    <dbl>    <dbl>
+#  1 businessday 2003-01-01     loughran  polarity sent_logit         -1.80    -1       -1        0    
+#  2 businessday 2003-02-01     loughran  polarity sent_logit         -0.784   -0.639   -0.576   -0.645
+#  3 businessday 2003-03-01     loughran  polarity sent_logit         -0.768   -0.539   -0.505   -0.523
+#  4 businessday 2003-04-01     loughran  polarity sent_logit         -0.604   -0.423   -0.420   -0.388
+#  5 businessday 2003-05-01     loughran  polarity sent_logit         -0.845   -0.582   -0.542   -0.567
+#  6 businessday 2003-06-01     loughran  polarity sent_logit         -0.594   -0.426   -0.390   -0.394
+#  7 businessday 2003-07-01     loughran  polarity sent_logit         -0.672   -0.462   -0.439   -0.433
+#  8 businessday 2003-08-01     loughran  polarity sent_logit         -0.502   -0.356   -0.337   -0.323
+#  9 businessday 2003-09-01     loughran  polarity sent_logit         -0.637   -0.478   -0.435   -0.452
+# 10 businessday 2003-10-01     loughran  polarity sent_logit         -0.604   -0.412   -0.384   -0.381
+# # … with 214 more rows
 ```
 
 # Count of articles that make up sentiment
@@ -133,20 +133,20 @@ sent_counts(
    freq = "week"
    )
 
-# # A tibble: 1,049 × 2
+# # A tibble: 972 × 2
 #    published_date article_count
 #    <chr>                  <int>
-#  1 1969-12-29                91
-#  2 2001-01-01                37
-#  3 2001-01-08                56
-#  4 2001-01-15                76
-#  5 2001-01-22                70
-#  6 2001-01-29                19
-#  7 2001-02-05                46
-#  8 2001-02-12                63
-#  9 2001-02-19               140
-# 10 2001-02-26               178
-# # … with 1,039 more rows
+#  1 2003-01-13                 1
+#  2 2003-01-20                 1
+#  3 2003-01-27                 1
+#  4 2003-02-03                 3
+#  5 2003-02-10                 7
+#  6 2003-02-17                26
+#  7 2003-02-24                56
+#  8 2003-03-03                90
+#  9 2003-03-10               171
+# 10 2003-03-17               152
+# # … with 962 more rows
 ```
 
 # Date polarity
@@ -163,20 +163,20 @@ sent_date_polarity(
    aggr = "sent_logit"
    )
 
-# # A tibble: 3,122 × 7
+# # A tibble: 972 × 7
 #    source published_date dict_name type     aggr_type  positive_words negative_words
 #    <chr>  <chr>          <chr>     <chr>    <chr>               <int>          <int>
-#  1 all    1969-12-29     loughran  polarity sent_logit              0             59
-#  2 all    1969-12-29     loughran  polarity sent_logit              0              0
-#  3 all    1969-12-29     loughran  polarity sent_logit             28              0
-#  4 all    2001-01-01     loughran  polarity sent_logit              0             32
-#  5 all    2001-01-01     loughran  polarity sent_logit              5              0
-#  6 all    2001-01-08     loughran  polarity sent_logit              0             40
-#  7 all    2001-01-08     loughran  polarity sent_logit              9              0
-#  8 all    2001-01-08     loughran  polarity sent_logit              0              0
-#  9 all    2001-01-15     loughran  polarity sent_logit             11              0
-# 10 all    2001-01-15     loughran  polarity sent_logit              0              0
-# # … with 3,112 more rows
+#  1 all    2003-01-13     loughran  polarity sent_logit              0              1
+#  2 all    2003-01-20     loughran  polarity sent_logit              0              1
+#  3 all    2003-01-27     loughran  polarity sent_logit              0              1
+#  4 all    2003-02-03     loughran  polarity sent_logit              0              3
+#  5 all    2003-02-10     loughran  polarity sent_logit              0              7
+#  6 all    2003-02-17     loughran  polarity sent_logit              1             25
+#  7 all    2003-02-24     loughran  polarity sent_logit             14             33
+#  8 all    2003-03-03     loughran  polarity sent_logit             20             67
+#  9 all    2003-03-10     loughran  polarity sent_logit             31            130
+# 10 all    2003-03-17     loughran  polarity sent_logit             39            105
+# # … with 962 more rows
 ```
 
 # Word polarity
@@ -188,22 +188,22 @@ sent_word_polarity(
    source = "all",
    model = "model_2021-05-15",
    topic = "economy",
-   freq = "month",
+   freq = "day",
    dict = "loughran"
    )
 
 # # A tibble: 100 × 8
 #    source topic_econ tokens       dict_name sentiment mentions word_rank date_range             
 #    <chr>  <chr>      <chr>        <chr>     <chr>        <int>     <int> <chr>                  
-#  1 all    economy    against      loughran  negative      1670         1 2021-02-28 - 2021-08-28
-#  2 all    economy    concerns     loughran  negative       852         2 2021-02-28 - 2021-08-28
-#  3 all    economy    lost         loughran  negative       790         3 2021-02-28 - 2021-08-28
-#  4 all    economy    crisis       loughran  negative       754         4 2021-02-28 - 2021-08-28
-#  5 all    economy    losses       loughran  negative       604         5 2021-02-28 - 2021-08-28
-#  6 all    economy    unrest       loughran  negative       583         6 2021-02-28 - 2021-08-28
-#  7 all    economy    unemployment loughran  negative       554         7 2021-02-28 - 2021-08-28
-#  8 all    economy    challenges   loughran  negative       552         8 2021-02-28 - 2021-08-28
-#  9 all    economy    late         loughran  negative       530         9 2021-02-28 - 2021-08-28
-# 10 all    economy    violence     loughran  negative       528        10 2021-02-28 - 2021-08-28
+#  1 all    economy    against      loughran  negative      1681         1 2021-02-28 - 2021-08-29
+#  2 all    economy    concerns     loughran  negative       856         2 2021-02-28 - 2021-08-29
+#  3 all    economy    lost         loughran  negative       797         3 2021-02-28 - 2021-08-29
+#  4 all    economy    crisis       loughran  negative       754         4 2021-02-28 - 2021-08-29
+#  5 all    economy    losses       loughran  negative       608         5 2021-02-28 - 2021-08-29
+#  6 all    economy    unrest       loughran  negative       586         6 2021-02-28 - 2021-08-29
+#  7 all    economy    unemployment loughran  negative       562         7 2021-02-28 - 2021-08-29
+#  8 all    economy    challenges   loughran  negative       554         8 2021-02-28 - 2021-08-29
+#  9 all    economy    late         loughran  negative       534         9 2021-02-28 - 2021-08-29
+# 10 all    economy    violence     loughran  negative       530        10 2021-02-28 - 2021-08-29
 # # … with 90 more rows
 ```
