Remove checking of params

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,9 @@ knitr::opts_chunk$set(
 
 [Sententia](https://github.com/71point4/sententia) provides access to media sentiment data from the Bureau for Economic research.
 
-The homepage for the {sententia} R package is at https://github.com/71point4/sententia.
+This is the homepage for the {sententia} R package is at <https://github.com/71point4/sententia>.
+
+The homepage for the {sententia} `python` package is at <https://github.com/71point4/pysententia>.
 
 ## Installation
 
